--- a/bio.html
+++ b/bio.html
@@ -139,7 +139,7 @@ a.section:hover:before {
 </div>
 
 <div class="content">
-<img src="https://i.postimg.cc/T3C42Qws/tree.png" width="600">
+<img src="https://i.postimg.cc/DwnLTvZL/phylo-Tree-Circle.png" width="600" height="600">
     </div>
 <div class="content" id="container">
 <p>Cristian Hernandez-Blick is a student, artist, writer, and designer, currently located in Vancouver, BC. 
