--- a/bio.html
+++ b/bio.html
@@ -41,6 +41,8 @@ body {
    display: grid;
    margin: auto 0;
    padding-top: 0px;
+   padding-left: 5px;
+   padding-right: 5px;
    font-size: 12px;
     }
 
