--- a/bio.html
+++ b/bio.html
@@ -152,9 +152,9 @@ a.section:hover:before {
 
     
 <div class="header">    
-<li><a href="https://www.instagram.com/organism.zero">INSTAGRAM ↗</a></li>
-<li><a href="https://www.twitter.com/network_motif">TWITTER ↗</a></li>
-<li><a href="https://www.are.na/indra-s-net">ARE.NA ↗</a></li>
+<li><a href="https://www.instagram.com/organism.zero">INSTAGRAM ⤴</a></li>
+<li><a href="https://www.twitter.com/network_motif">TWITTER ⤴</a></li>
+<li><a href="https://www.are.na/indra-s-net">ARE.NA ⤴</a></li>
 <li><a href="bio.html">Back To Top</a></li>
 </div>    
     
