--- a/bio.html
+++ b/bio.html
@@ -180,10 +180,10 @@
       <center>
          <div class="content1">
             <div class="container">
-               • Cristian Hernandez-Blick is a human based in Vancouver, BC
+               • A human based in Vancouver, BC
                <br>• BFA Critical Theory and Cultural Studies [Emily Carr University]
-               <br>• Co-founder and principle operator of alternative comics press <a class="section" href="https://www.shop.ddoogg.ca">DDOOGG</a>
-               <br><br>• Currently interested in theories, methodologies, histories, and socio-political implications of Genomics, Biological and Cultural Evolution, Ecology, Cognition, Machine Learning and AI, Complex Systems, Process Philosophy, Networks and Sociality, as well as Experimental Comics and Abstraction
+               <br>• Co-founder of alternative comics press <a class="section" href="https://www.shop.ddoogg.ca">DDOOGG</a>
+               <br><br>• Currently interested in theories, methodologies, histories, and socio-political implications of Genomics, Biological and Cultural Evolution, Ecology, Cognition, Complex Systems, Process Philosophy, as well as Experimental Comics and Abstraction
                <p><br><a class="section" href="">CV</a>
             </div>
          </div>
