--- a/bio.html
+++ b/bio.html
@@ -192,7 +192,7 @@
          <li><a href="https://www.instagram.com/organism.zero">INSTAGRAM</a></li>
          <li><a href="https://www.twitter.com/network_motif">TWITTER</a></li>
          <li><a href="https://www.are.na/indra-s-net">ARE.NA</a></li>
-         <li><a href="index.html">Back To Top</a></li>
+         <li><a href="bio.html">Back To Top</a></li>
       </div>
       <script>
          window.onscroll = function() {myFunction()};
