--- a/bio.html
+++ b/bio.html
@@ -182,8 +182,9 @@
             <div class="container">
                • A human based in Vancouver, BC
                <br>• BFA Critical Theory and Cultural Studies [Emily Carr University]
+               <br>• Currently MA student in STS graduate program [University of British Columbia]
                <br>• Co-founder of alternative comics press <a class="section" href="https://www.shop.ddoogg.ca">DDOOGG</a>
-               <br><br>• Currently interested in theories, methodologies, histories, and socio-political implications of Genomics, Biological and Cultural Evolution, Ecology, Cognition, Complex Systems, Process Philosophy, as well as Experimental Comics and Abstraction
+               <br><br>• Interested in topics related to conceptual/theoretical, methodological, historical, and socio-political implications of Genomics, Biological and Cultural Evolution, Cybernetics, Ecology, Cognition, Complex Systems, Process Philosophy, as well as Experimental and Abstract Comics
                <p><br><a class="section" href="">CV</a>
             </div>
          </div>
