--- a/bio.html
+++ b/bio.html
@@ -182,9 +182,10 @@
             <div class="container">
                • A human based in Vancouver, BC
                <br>• BFA Critical Theory and Cultural Studies [Emily Carr University]
-               <br>• Currently MA student in STS graduate program [University of British Columbia]
                <br>• Co-founder of alternative comics press <a class="section" href="https://www.shop.ddoogg.ca">DDOOGG</a>
-               <br><br>• Interested in topics related to conceptual/theoretical, methodological, historical, and socio-political implications of Genomics, Biological and Cultural Evolution, Cybernetics, Ecology, Cognition, Complex Systems, Process Philosophy, as well as Experimental and Abstract Comics
+               <br>• Currently MA student in STS graduate program [University of British Columbia]
+               <br><br>• Interested in topics related to conceptual/theoretical, methodological, historical, socio-political, and ethical implications of research in Genomics, Biological and Cultural Evolution, Cybernetics, Ecology, Cognition, Complex Systems, Process Philosophy
+               <br>• Also love Experimental and Abstract Comics
                <p><br><a class="section" href="">CV</a>
             </div>
          </div>
