--- a/bio.html
+++ b/bio.html
@@ -184,7 +184,7 @@
                <br>• BFA Critical Theory and Cultural Studies [Emily Carr University]
                <br>• MA student in STS graduate program [University of British Columbia]
                <br>• Co-founder of alternative comics press <a class="section" href="https://www.shop.ddoogg.ca">DDOOGG</a>
-               <br><br>• Interested in topics related to conceptual/theoretical, methodological, historical, socio-political, and ethical implications of research in Genomics, Biological and Cultural Evolution, Cybernetics, Ecology, Cognition, Complex Systems, Process Philosophy
+               <br><br>• Interested in topics related to conceptual/theoretical, methodological, historical, socio-political, and ethical implications of research in Genomics, Biological and Cultural Evolution, Cybernetics, Ecology, Cognition, Complex Systems, and Process Philosophy
                <br>• Also love Experimental and Abstract Comics
                <p><br><a class="section" href="">CV</a>
             </div>
